# GarbageCollector

./: .gitignore  CMakeLists.txt  README.md  demo.c
.github/workflows/: wf_tests.yml
include/: gc.h  global.h  hashmap.h  memory_access.h  safe_functions.h
platform/apple/: memory_access.c
platform/bsd/: memory_access.c
platform/linux/: memory_access.c
src/: gc.c  global.c  hashmap.c  safe_functions.c
tests/: CMakeLists.txt
tests/src/: gc_tests.cpp  hashmap_tests.cpp
